fixed pic on safari

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,6 +6,19 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+img {
+  border-radius: 150px;
+  border: 3px solid red;
+}
+
+.borderRadius {
+  border: 3px solid red;
+}
+
+.borderRadius > * {
+  border-radius: 150px;
+  border: 3px solid red;
+}
 
 body {
   margin: 0;
